<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppCenter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="content">内容</string>
    <string name="start">开始</string>
    <string name="end">结束</string>
    <string name="location">位置</string>
    <string name="describ">说明</string>
    <string name="newEvent">新事件</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="delete">delete</string>

    <string name="Drawer_name">Navigation Drawer Example</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

    <string name="application">Robolectric</string>
    <string name="menu_item_2">Second menu item</string>
    <string name="menu_item_1">First menu item</string>
    <string name="click_me">click me</string>
    <string name="zero">0</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>

    <string name="open">打开</string>
    <string name="close">关闭</string>

</resources>
